[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viraxlog"
version = "2.0.0"
description = "Système de logging immuable hyper-performant avec chaînage cryptographique, WAL SQLite, Merkle trees et multi-backends."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "damienos61", email = "damienos61@gmail.com"}
]
keywords = ["logging", "cryptography", "immutable", "sqlite", "postgres", "audit", "watchers", "merkle-tree", "wal-mode"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
    "Topic :: Security :: Cryptography",
    "Topic :: Database"
]
dependencies = [
    "psutil>=5.9.0",
    "cryptography>=41.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "ruff>=0.1",
    "mypy>=1.5",
    "sphinx>=7.0"
]
postgres = [
    "psycopg2-binary>=2.9.0"
]
redis = [
    "redis>=5.0.0"
]
metrics = [
    "prometheus-client>=0.17.0"
]
full = [
    "viraxlog[dev,postgres,redis,metrics]"
]

[project.urls]
Homepage = "https://github.com/damienos61/viraxlog"
Documentation = "https://viraxlog.readthedocs.io"
Repository = "https://github.com/damienos61/viraxlog.git"
"Bug Tracker" = "https://github.com/damienos61/viraxlog/issues"
Changelog = "https://github.com/damienos61/viraxlog/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
viraxlog = ["py.typed"]

[project.scripts]
viraxlog = "viraxlog.cli:main"
viraxlog-audit = "viraxlog.audit_cli:main"
viraxlog-viewer = "viraxlog.viewer:main"

# -------- BLACK --------
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
extend-exclude = '''
/(
  | \.git
  | \.venv
  | build
  | dist
)/
'''

# -------- ISORT --------
[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

# -------- PYTEST --------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src/viraxlog --cov-report=term-missing --cov-report=html --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks"
]

# -------- COVERAGE --------
[tool.coverage.run]
source = ["src/viraxlog"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if sys.version_info"
]

# -------- MYPY --------
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# -------- RUFF --------
[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "RUF"]
ignore = ["E501", "E203", "W503"]
exclude = [".git", ".venv", "build", "dist", "tests"]
